fixed icons alignment

--- a/src/components/EatOutSection/EatOutRestaurantPage/InfoAndLocation/information.module.scss
+++ b/src/components/EatOutSection/EatOutRestaurantPage/InfoAndLocation/information.module.scss
@@ -22,9 +22,8 @@
         &Icon {
             align-items: center;
             color: $color-malibu;
-            display: flex;
-            justify-content: center;
-            padding: 1rem;
+            margin-right: 1.3rem;
+            margin-top: 1.4rem;
         }
 
         &Info {
